# beshell

./: .gitignore  CMakeLists.txt  Kconfig  changelog.md  idf_component.yml
examples/basic/: .gitignore  CMakeLists.txt  README-EN.md  README.md  README_EN.md  idf_component.yml  sdkconfig.defaults
examples/basic/js/example/: wifi-ap.js
examples/basic/main/: main.cpp
examples/beshell-app/: .gitignore  CMakeLists.txt  README.md  README_EN.md  sdkconfig.defaults
examples/beshell-app/img/: partitions-16MB.csv  partitions-4MB.csv  partitions-8MB.csv
examples/beshell-app/js/: main.js
examples/beshell-app/js/example/: gpio-blink.js  gpio.js  i2c-at24c02.js  wifi-scan.js  wifi-sta.js
examples/beshell-app/main/: idf_component.yml  main.cpp
includes/: BeShell.h  BeShell.hpp  JSEngine.hpp  NativeClass.hpp  NativeModule.hpp
src/: BeShell.cpp  BeShell.hpp  JSTimer.cpp  JSTimer.hpp  ModuleLoader.cpp  NativeModule.cpp  debug.h  include.hpp  malloc_funcs.c  psram.c  qjs_utils.c  qjs_utils.h  quickjs_private.h
src/basic/: Console.cpp  Console.hpp
src/beshell/: BeShell.class.hpp  BeShell.cpp  BeShell.h  BeShell.hpp  EventEmitter.cpp  EventEmitter.hpp  JSEngine.cpp  JSEngine.hpp  JSTimer.cpp  JSTimer.hpp  ModuleLoader.cpp  ModuleLoader.hpp  NativeClass.cpp  NativeClass.hpp  NativeModule.cpp  NativeModule.hpp  include.hpp  platform.esp32.cpp  qjs_utils.c  qjs_utils.h  quickjs.h  quickjs_private.h  stubs.c  thread-esp32.cpp
src/beshell/basic/: Console.cpp  Console.hpp
src/beshell/cammonds/: Cammonds.cpp  Cammonds.hpp
src/beshell/driver/: DriverModule.cpp  DriverModule.hpp  I2CDevice.hpp
src/beshell/fs/: FS-JS.cpp  FS.cpp  FS.hpp  LittleFS.cpp
src/beshell/js/: device.c  gpio.c  gpio.js  json.c  misc.c  ota.c  ota.js  repl.c  repl.js  telnet.c  telnet.js  wifi.c
src/beshell/js/bt/: central.c  central.js  peripheral.js
src/beshell/module/: Flash.cpp  Flash.hpp  GPIO.cpp  GPIO.hpp  NVS.cpp  NVS.hpp  Path.hpp  Process.cpp  Process.hpp  WiFi.cpp  WiFi.hpp
src/beshell/module/bt/: BT.central.cpp  BT.cpp  BT.hpp  BT.peripheral.cpp
src/beshell/module/gpio/: GPIO.adc.cpp  GPIO.cpp  GPIO.hpp  GPIO.pwm.cpp
src/beshell/module/logger/: Logger.JS.cpp  Logger.cpp  Logger.hpp  logger-esp.cpp
src/beshell/module/nimble/: NimBLE.central.cpp  NimBLE.cpp  NimBLE.hpp  Peer.cpp  Peer.hpp
src/beshell/module/serial/: CDC.cpp  CDC.hpp  I2C-Slave.cpp  I2C-legacy.cpp  I2C-legacy.hpp  I2C.cpp  I2C.hpp  I2S.cpp  I2S.hpp  SPI.cpp  SPI.hpp  Serial.cpp  Serial.hpp  UART.cpp  UART.hpp  soc_serial.h
src/beshell/repl/: Protocal.hpp  REPL.cpp  REPL.hpp  REPLCDC.cpp  REPLCDC.hpp  REPLChannelNClass.cpp  REPLChannelNClass.hpp  REPLModule.cpp  REPLSerial.hpp  REPLStdIO.cpp  REPLStdIO.hpp
src/beshell/repl-io/: REPL.hpp  REPLChannel.cpp  REPLChannel.hpp  REPLModule.hpp  REPLSerial.cpp
src/beshell/telnet/: Protocal.hpp  Telnet.cpp  Telnet.hpp  TelnetCDC.cpp  TelnetCDC.hpp  TelnetChannel.cpp  TelnetChannel.hpp  TelnetChannelNClass.cpp  TelnetChannelNClass.hpp  TelnetModule.cpp  TelnetModule.hpp
src/fs/: FS-JS.cpp  FS.hpp  LittleFS.cpp
src/js/: gpio.js  mg.c  mg.js  telnet.c  telnet.js
src/js/bt/: central.js  peripheral.c
src/mg/: Mg.cpp
src/mg/mqtt/: MQTTClient.cpp  MQTTClient.hpp
src/module/: Flash.cpp  Process.cpp  Process.hpp  WiFi.cpp
src/module/bt/: BT.central.cpp  BT.cpp  BT.hpp  BT.peripheral.cpp
src/module/logger/: Logger.JS.cpp  Logger.cpp  Logger.hpp  logger-esp.cpp  logger-imp.hpp
src/module/serial/: CDC.cpp  SPI.hpp  UART.cpp  UART.hpp
src/repl/: REPL.cpp  REPL.hpp
src/telnet/: Telnet.cpp  TelnetCDC.cpp  TelnetChannelNClass.cpp  TelnetModule.cpp
tools/: js-to-c.js
